--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>TicTacToe</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<!-- comment added
+        !-->
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
