--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+<!-- code starts here
+        !-->
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
